파티클 툴 기능 추가 중.
파티클 툴 기능 추가 중.
라이프 타임 관련
랜덤 관련
보간 관련 기능 추가 완료.

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,27 +1,36 @@
 [Window][Debug##Default]
-ViewportPos=2148,317
+ViewportPos=2164,333
 ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Play_Stop]
-Pos=47,41
-Size=224,404
+ViewportPos=1958,22
+ViewportId=0xA4D966FE
+Pos=503,1075
+Size=99,300
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][TextureBox]
+ViewportPos=1958,22
+ViewportId=0xA4D966FE
+Pos=0,1075
+Size=300,300
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][ParticleSystem]
+ViewportPos=1958,22
+ViewportId=0xA4D966FE
+Size=602,1073
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][TextureBox]
-Pos=47,41
-Size=300,300
-Collapsed=0
-DockId=0x00000002,1
-
-[Window][ParticleSystem]
-ViewportPos=1841,64
-ViewportId=0xCAAA7EE8
-Size=706,733
-Collapsed=0
-
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=55,72 Size=224,404 Selected=0x8D5523B2
+DockNode      ID=0x00000001 Pos=1958,22 Size=602,1375 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=631,1073 Selected=0xEB3B5418
+  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=631,300 Split=X Selected=0x8D5523B2
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=525,300 Selected=0x8D5523B2
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=104,300 Selected=0x7637BC6E
 
