물리 충돌 디버그 인포 출력 준비 완 / 디버그 매니저로 모든 디버깅 로직 통일
물리 충돌 디버그 인포 출력 준비 완

--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -48,6 +48,8 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Mesh.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Material.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Rigidbody.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\DebugManager.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\CapsuleCollider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -107,5 +109,7 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Mesh.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Material.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Rigidbody.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\DebugManager.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\CapsuleCollider.h" />
   </ItemGroup>
 </Project>
