--- a/DUOLJson/DUOLJson.vcxproj.filters
+++ b/DUOLJson/DUOLJson.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="include\DUOLJson\document.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLJson\JsonMacro.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
