--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -191,6 +191,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\CapsuleCollider.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\DebugManager.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\BoxCollider.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Camera.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\enabled_shared_from_base.h" />
@@ -242,6 +244,8 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Rigidbody.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\CapsuleCollider.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\DebugManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Rigidbody.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Material.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Mesh.cpp" />
