fbx vertex 최적화 완료
마리아는 노말이 이상하고(미러 문제인듯) 조이는 노말이 좌우반전된다.
일단 아트 작업물 올리고 더 확인해보는걸로

--- a/DUOLGame/DUOLGame.vcxproj
+++ b/DUOLGame/DUOLGame.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="src\DUOLGame\Application.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="src\DUOLGame\TestScripts\ModelShooter.cpp" />
+    <ClCompile Include="src\DUOLGame\TestScenes\YDTestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\TestScripts\EnableTest.h" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Include\DUOLGame\TestScenes\CometTestScene.h" />
     <ClInclude Include="Include\DUOLGame\Application.h" />
     <ClInclude Include="Include\DUOLGame\TestScripts\ModelShooter.h" />
+    <ClInclude Include="Include\DUOLGame\TestScenes\YDTestScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
