--- a/DUOLGame/DUOLGame.vcxproj.filters
+++ b/DUOLGame/DUOLGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\DUOLGame\TestScripts\ModelShooter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLGame\TestScenes\YDTestScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\Application.h">
@@ -48,6 +51,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Include\DUOLGame\TestScripts\ModelShooter.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\DUOLGame\TestScenes\YDTestScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
